increased section width to avoid text wrap in deployed site

--- a/styles/style.css
+++ b/styles/style.css
@@ -59,8 +59,7 @@ main {
 
 section {
     background-color: lightskyblue;
-    width: 530px;
-    max-width: 80%;
+    width: 550px;
     margin-left: 20px;
 }
 
